--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div style="border-top-color: white">
       <p class="let2"> Experiencia</p>
      
-      <p class="letra"> Austral Líneas Áereas, profesor en Escuelas Medias (Bs. As.), talleres sobre matemas (a profesionales de la salud mental y otras disciplinas), enseñanza de lenguajes de alto nivel</p>
+      <p class="letra1"> Austral Líneas Áereas, profesor en Escuelas Medias (Bs. As.), talleres sobre matemas (a profesionales de la salud mental y otras disciplinas), enseñanza de lenguajes de alto nivel</p>
     </div>
   </main>   
 </header>
