cierre de etiqueda div

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <div class ="hero-inferior" id="fondo" class="logo">                                                     
                     <img class="hero-inferior-imagen img-fluid" src="imagenes/Jorge-original.jpg" alt="Logo Argentina Programa">
                 </div>       
+        </div>        
         </section>
 
     <div>
